[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flubroad"
version = "0.1.0"
description = "Multi-agent framework for AI-assisted biomedical literature synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "importlib-metadata>=6.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["flubroad*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that require real API access (skip with -m 'not integration')",
    "eval: marks tests that require live LLM calls (skip with -m 'not eval')",
]
